# OSMate

./: .env.example  .gitignore  .pylintrc  LICENSE  LLMService.py  README.md  config.py  llm_service.py  main.py  providers.py  pyproject.toml  requirements.txt
models/: models.py  requests.py
