[tool.poetry]
name = "osmate"
version = "0.1.0"
description = "An LLM-based agent that allows users to perform basic OS level operations, using natural language input."
authors = ["Alankrit Nayak <alankritnayak10@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
poetry-plugin-dotenv = "^2.4.0"
openai = "^1.51.2"
black = "^24.10.0"
mypy = "^1.12.0"
pylint = "^3.3.1"
langchain-community = "^0.3.3"
langgraph = "^0.2.39"
langchain-openai = "^0.2.3"
hypercorn = "^0.17.3"
uvicorn = "^0.31.1"
langchain-experimental = "^0.3.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.1"
pylint = "^3.3.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
